{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 814,
  "lineage": "bd84c04a-6653-3cde-99a3-e5bed742148c",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:security-group/sg-092f38c91556251f2",
            "description": "Security Group with dynamic ports and CIDR blocks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092f38c91556251f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "KGB Network Bastion SG",
            "name_prefix": "",
            "owner_id": "127214159695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "KGB Network Bastion SG"
            },
            "tags_all": {
              "Name": "KGB Network Bastion SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee2fee63880bf6f2",
            "arn": "arn:aws:ec2:eu-central-1:127214159695:elastic-ip/eipalloc-0ee2fee63880bf6f2",
            "domain": "vpc",
            "id": "eipalloc-0ee2fee63880bf6f2",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-75-106-228.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.106.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "KGB Network NAT GW EIP-1"
            },
            "tags_all": {
              "Name": "KGB Network NAT GW EIP-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0103b9a7fd7fde27a",
            "arn": "arn:aws:ec2:eu-central-1:127214159695:elastic-ip/eipalloc-0103b9a7fd7fde27a",
            "domain": "vpc",
            "id": "eipalloc-0103b9a7fd7fde27a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-177-31-8.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.31.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "KGB Network NAT GW EIP-2"
            },
            "tags_all": {
              "Name": "KGB Network NAT GW EIP-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:internet-gateway/igw-07bf307b6bd7a3144",
            "id": "igw-07bf307b6bd7a3144",
            "owner_id": "127214159695",
            "tags": {
              "Name": "KGB Network IGW"
            },
            "tags_all": {
              "Name": "KGB Network IGW"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee2fee63880bf6f2",
            "association_id": "eipassoc-06d05c0f47093bf0f",
            "connectivity_type": "public",
            "id": "nat-03b1c819d4847e4b9",
            "network_interface_id": "eni-0b08bc2ff544b25d7",
            "private_ip": "10.0.11.56",
            "public_ip": "3.75.106.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01680bc19036c6ef7",
            "tags": {
              "Name": "KGB Network NAT GW-1"
            },
            "tags_all": {
              "Name": "KGB Network NAT GW-1"
            }
          },
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0103b9a7fd7fde27a",
            "association_id": "eipassoc-0d8115be9917f4b9b",
            "connectivity_type": "public",
            "id": "nat-0643efa5db4e6380f",
            "network_interface_id": "eni-084a819cbad826dc7",
            "private_ip": "10.0.21.179",
            "public_ip": "63.177.31.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-008c9e2f62487d270",
            "tags": {
              "Name": "KGB Network NAT GW-2"
            },
            "tags_all": {
              "Name": "KGB Network NAT GW-2"
            }
          },
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:route-table/rtb-012b71ad85a1274f3",
            "id": "rtb-012b71ad85a1274f3",
            "owner_id": "127214159695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KGB Network DB Route Table"
            },
            "tags_all": {
              "Name": "KGB Network DB Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:route-table/rtb-0369f3115f63e7e05",
            "id": "rtb-0369f3115f63e7e05",
            "owner_id": "127214159695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03b1c819d4847e4b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KGB Network Private Route Table-1"
            },
            "tags_all": {
              "Name": "KGB Network Private Route Table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_nat_gateway.nat",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:route-table/rtb-0656032dd08d3aba3",
            "id": "rtb-0656032dd08d3aba3",
            "owner_id": "127214159695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0643efa5db4e6380f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KGB Network Private Route Table-2"
            },
            "tags_all": {
              "Name": "KGB Network Private Route Table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_nat_gateway.nat",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:route-table/rtb-0160694699205394f",
            "id": "rtb-0160694699205394f",
            "owner_id": "127214159695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bf307b6bd7a3144",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KGB Network Public Route Table"
            },
            "tags_all": {
              "Name": "KGB Network Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_prod.aws_internet_gateway.main",
            "module.vpc_prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019dedba6c0a72ae6",
            "route_table_id": "rtb-012b71ad85a1274f3",
            "subnet_id": "subnet-07fca3559b1206f1a"
          },
          "dependencies": [
            "module.vpc_prod.aws_route_table.db_subnets",
            "module.vpc_prod.aws_subnet.db_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8206109042f087",
            "route_table_id": "rtb-012b71ad85a1274f3",
            "subnet_id": "subnet-05152bce3ea9438e6"
          },
          "dependencies": [
            "module.vpc_prod.aws_route_table.db_subnets",
            "module.vpc_prod.aws_subnet.db_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08be77c231bcdcc44",
            "route_table_id": "rtb-0369f3115f63e7e05",
            "subnet_id": "subnet-05e0decc6c7361082"
          },
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_nat_gateway.nat",
            "module.vpc_prod.aws_route_table.private_subnets",
            "module.vpc_prod.aws_subnet.private_subnets",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9b78a3d0b242772",
            "route_table_id": "rtb-0656032dd08d3aba3",
            "subnet_id": "subnet-0d6d220dff39abd15"
          },
          "dependencies": [
            "module.vpc_prod.aws_eip.nat",
            "module.vpc_prod.aws_nat_gateway.nat",
            "module.vpc_prod.aws_route_table.private_subnets",
            "module.vpc_prod.aws_subnet.private_subnets",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7834e446c2425b1",
            "route_table_id": "rtb-0160694699205394f",
            "subnet_id": "subnet-01680bc19036c6ef7"
          },
          "dependencies": [
            "module.vpc_prod.aws_internet_gateway.main",
            "module.vpc_prod.aws_route_table.public_subnets",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ebbfbdbd715b5ac",
            "route_table_id": "rtb-0160694699205394f",
            "subnet_id": "subnet-008c9e2f62487d270"
          },
          "dependencies": [
            "module.vpc_prod.aws_internet_gateway.main",
            "module.vpc_prod.aws_route_table.public_subnets",
            "module.vpc_prod.aws_subnet.public_subnets",
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-07fca3559b1206f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fca3559b1206f1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network DB Subnet-1"
            },
            "tags_all": {
              "Name": "KGB Network DB Subnet-1"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-05152bce3ea9438e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05152bce3ea9438e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network DB Subnet-2"
            },
            "tags_all": {
              "Name": "KGB Network DB Subnet-2"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-05e0decc6c7361082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e0decc6c7361082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network Private Subnet-1"
            },
            "tags_all": {
              "Name": "KGB Network Private Subnet-1"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-0d6d220dff39abd15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6d220dff39abd15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network Private Subnet-2"
            },
            "tags_all": {
              "Name": "KGB Network Private Subnet-2"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-01680bc19036c6ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01680bc19036c6ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network Public Subnet-1"
            },
            "tags_all": {
              "Name": "KGB Network Public Subnet-1"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:subnet/subnet-008c9e2f62487d270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c9e2f62487d270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214159695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KGB Network Public Subnet-2"
            },
            "tags_all": {
              "Name": "KGB Network Public Subnet-2"
            },
            "vpc_id": "vpc-069112ec1416c3110"
          },
          "dependencies": [
            "module.vpc_prod.aws_vpc.main",
            "module.vpc_prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:127214159695:vpc/vpc-069112ec1416c3110",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ddb93793e1e0461",
            "default_route_table_id": "rtb-00fcf002f3ee7c9c8",
            "default_security_group_id": "sg-01f7a22ca8d60a2a8",
            "dhcp_options_id": "dopt-0d3d8f42f87bde5b9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069112ec1416c3110",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00fcf002f3ee7c9c8",
            "owner_id": "127214159695",
            "tags": {
              "Name": "KGB Network VPC"
            },
            "tags_all": {
              "Name": "KGB Network VPC"
            }
          }
        }
      ]
    }
  ]
}